# pytest-motor

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .yapfignore  CHANGES.md  CONTRIBUTING.md  LICENSE.txt  README.md  mypy.ini  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: lint.yaml  main.yaml  publish.yaml  python.yaml  test.yaml
pytest_motor/: mongod_binary.py  plugin.py
requirements/: coverage_requirements.txt  format_requirements.txt  lint_requirements.txt  requirements.txt  test_requirements.txt  type_check_requirements.txt
requirements/frozen/: frozen_coverage_requirements.txt  frozen_deployment_requirements.txt  frozen_format_requirements.txt  frozen_lint_requirements.txt  frozen_test_requirements.txt  frozen_type_check_requirements.txt
scripts/: all.sh  build.sh  coverage.sh  format.sh  freeze.sh  integration.sh  lint.sh  publish.sh  test.sh  type_check.sh  unit.sh
test_data/: mongodb-macos-x86_64-4.4.6.tgz
test_data/files/: binary_downloader_tests.py  multiple_tests.py  paramatrized_test.py  port_tests.py  server_info_test.py
tests/: conftest.py  test_mongod_binary.py  test_plugin.py
tests/integration/: test_plugin.py
tests/unit/: test_mongod_binary.py  test_plugin.py
