[tool.coverage.report]
fail_under = 79

[tool.yapf]
column_limit = 100

[tool.yapfignore]
ignore_patterns = [".venv"]

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
testpaths = ["tests"]
markers = [
    "unit: marks tests as a unit test",
    "integration: marks tests as an integration test",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
enable = ["useless-suppression"]
disable = ["duplicate-code"]

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
exclude = ".venv/"
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "setuptools.*",
    "motor.*",
    "pymongo.*",
    "distro.*",
    "pytest_lazyfixture.*",
]
ignore_missing_imports = true

[tool.isort]
src_paths = ["pytest_motor", "tests", "test_data"]
quiet = true
line_length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
